package com.telusinternational.programacion.avanzada.unidad4.acuerdos;

import java.util.List;

/**
 *
 * @author Kenny
 */
public class Capitulo {

    private Integer numero;
    private String nombre;
    /**
     * VIGENTE DEROGADO
     */
    private String estado;
    private List<Articulo> articulos;

}
