package com.telusinternational.programacion.avanzada.unidad4.acuerdos;

/**
 *
 * @author Kenny
 */
public class Signatario extends Persona {

    private String puesto;
    

    public Signatario() {
        super();
    }

    public String getPuesto() {
        return puesto;
    }

    public void setPuesto(String puesto) {
        this.puesto = puesto;
    }

    
    
}
