@startuml
abstract class com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.AbstractServicio
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.Acuerdo
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.Articulo
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.Capitulo
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.Categoria
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.Persona
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.Principal
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.Signatario
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.ArticuloService
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.ServicioCategorias
class com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.SignatarioService
class java.util.ArrayList
class java.util.Date
class java.util.List
interface com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.ServicioInterface
com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.AbstractServicio --|> com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.ServicioInterface
com.telusinternational.programacion.avanzada.unidad4.acuerdos.Signatario --|> com.telusinternational.programacion.avanzada.unidad4.acuerdos.Persona
com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.ArticuloService --|> com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.AbstractServicio
com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.SignatarioService --|> com.telusinternational.programacion.avanzada.unidad4.acuerdos.servicios.AbstractServicio
@enduml